@@ -1,5 +1,9 @@
 ##Text encoding: utf-8
 
+2016-03-15  Jean Bréfort  <jean.brefort@normalesup.org>
+	* plugins/loaders/cdx/cdx.cc: remove unused field.
+	* plugins/loaders/cdxml/cdxml.cc: load reaction schemes.
+
 2016-03-14  Jean Bréfort  <jean.brefort@normalesup.org>
 	* libs/gcp/text.cc: fix position reading in SetProperty().
 	* plugins/loaders/cdxml/cdxml.cc: fix text import.
